force-app/main/default/objects/Case/fields/Employee_Current_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_Current_Title__c</fullName>
    <label>Employee Current Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>