force-app/main/default/objects/Case/fields/Employee_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesEmployeeManagerUser</relationshipName>
    <type>Lookup</type>
</CustomField>