force-app/main/default/objects/Case/fields/Employee_New_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_New_Title__c</fullName>
    <label>Employee New Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>