force-app/main/default/objects/Case/fields/New_Title_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Title_Effective_Date__c</fullName>
    <label>New Title Effective Date</label>
    <type>Date</type>
</CustomField>