force-app/main/default/objects/Case/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <inlineHelpText>Required when you select &quot;Others&quot; under Categories, Products, Issues/Requests, Solution</inlineHelpText>
    <label>Others Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>