force-app/main/default/objects/Case/fields/System_Error__c.field-meta.xml
<CustomField>
    <fullName>System_Error__c</fullName>
    <label>System Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>