force-app/main/default/objects/Case/recordTypes/Employee_Title_Changae.recordType-meta.xml
<RecordType>
    <fullName>Employee_Title_Changae</fullName>
    <active>true</active>
    <businessProcess>Employee Title Change</businessProcess>
    <label>Employee Title Changae</label>
</RecordType>