force-app/main/default/objects/Case/recordTypes/Employee_Title_Change.recordType-meta.xml
<RecordType>
    <fullName>Employee_Title_Change</fullName>
    <active>true</active>
    <businessProcess>Employee Title Change</businessProcess>
    <label>Employee Title Change</label>
</RecordType>