force-app/main/default/objects/Case/listViews/Employee_Title_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Employee_Title_Change_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Title Change</value>
    </filters>
    <label>Employee Title Change Requests</label>
</ListView>